login and registration works

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,6 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Login"
+            android:onClick="onLoginClick"
             android:background="@drawable/button_bg_transparent"/>
         <TextView
             android:id="@+id/registerLink"
