--- a/app/src/main/res/layout/activity_start_menu.xml
+++ b/app/src/main/res/layout/activity_start_menu.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_start_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -50,18 +51,6 @@
         android:onClick="onExitClick"
         android:background="@drawable/button_bg_transparent"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:id="@+id/btnEvents"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Events"
-        android:background="@drawable/button_bg_transparent"
-        android:onClick="onEventsClick"
-        android:layout_marginTop="19dp"
-        android:layout_below="@+id/btnEmployees"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 </RelativeLayout>
